Small Updates for testing

--- a/LGG_LevelDirectory/oauth_config.json
+++ b/LGG_LevelDirectory/oauth_config.json
@@ -1,4 +1,6 @@
 {
 	"clientID": "iDBYB-4htJMubZvUFwYxKA",
-	"clientSecret": "1eszLf7vzEo5ZZsA0hoXO37SacyAFA"
+	"clientSecret": "1eszLf7vzEo5ZZsA0hoXO37SacyAFA",
+	"refreshToken": "32065058-G9w8pov1AIWYda1Gpz7FaNRdbcBfKA",
+	"accessToken": "32065058-dpNdGrW4cKjEkrf_lkwOGYXiIlQJVA"
 }
